--- a/server/views/case-summary-record-order.njk
+++ b/server/views/case-summary-record-order.njk
@@ -130,7 +130,7 @@
 
     <h2 class="govuk-heading-l govuk-!-margin-0" style="color: #912b88">{{ currentOrder.sentence.description + ' (' + currentOrder.sentence.length + ' ' + currentOrder.sentence.lengthUnits + ')' }}</h2>
 
-    <div class="govuk-grid-row govuk-!-margin-top-4">
+    <div class="govuk-grid-row govuk-!-margin-top-6">
         <div class="govuk-grid-column-two-thirds">
 
             <p class="govuk-body govuk-!-margin-top-1 govuk-!-margin-bottom-0">
@@ -139,7 +139,7 @@
 
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-one-third">
-                    <p class="govuk-hint govuk-!-margin-bottom-0 qa-start-title">{{ "Status" if custodialOrder else "Started" }}</p>
+                    <p class="govuk-hint govuk-!-margin-bottom-0 qa-start-title">{{ "Post-release status" if custodialOrder else "Started" }}</p>
                     <p class="govuk-body-l govuk-!-font-weight-bold govuk-!-margin-0 qa-start-date">
                         {%- if custodialOrder -%}
                             {{ "On licence" if custodialOrder.custodialTypeCode === "B" else "On post-sentence supervision (PSS)" }}
