--- a/server/views/case-summary-record-order.njk
+++ b/server/views/case-summary-record-order.njk
@@ -128,7 +128,7 @@
 
 {% block caseContent %}
 
-    <h2 class="govuk-heading-l govuk-!-margin-0" style="color: #912b88">{{ currentOrder.sentence.description + ' (' + currentOrder.sentence.length + ' ' + currentOrder.sentence.lengthUnits + ')' }}</h2>
+    <h2 class="govuk-heading-l govuk-!-margin-0">{{ currentOrder.sentence.description + ' (' + currentOrder.sentence.length + ' ' + currentOrder.sentence.lengthUnits + ')' }}</h2>
 
     <div class="govuk-grid-row govuk-!-margin-top-6">
         <div class="govuk-grid-column-two-thirds">
@@ -182,8 +182,21 @@
                 </div>
             </div>
 
+            {% if currentOrder.licenceConditions | length %}
+                <h2 class="govuk-heading-m govuk-!-margin-top-8">Licence conditions</h2>
+                <ul class="govuk-list govuk-list--bullet qa-current-requirements-{{ loop.index0 }}">
+                    {%- for licenceConditions in currentOrder.licenceConditions %}
+                        <li>
+                            {{ licenceConditions.licenceConditionTypeMainCat.description }}
+                        </li>
+                    {% endfor %}
+                </ul>
+                <a href="" class=" govuk-body-m govuk-link govuk-link--no-visited-state">View licence conditions details</a>
+            {% endif %}
+
+
             {% if currentOrder.requirements | length %}
-                <h2 class="govuk-heading-m govuk-!-margin-top-8" style="color: #ffdd00">Requirements</h2>
+                <h2 class="govuk-heading-m govuk-!-margin-top-8">Requirements</h2>
 
                 {%- from "govuk/components/table/macro.njk" import govukTable -%}
                 {% if currentOrder.active %}
@@ -227,7 +240,7 @@
 
     {% if currentOrder.active %}
 
-        <h2 class="govuk-heading-m govuk-!-margin-top-8" style="color: aqua">Attendance</h2>
+        <h2 class="govuk-heading-m govuk-!-margin-top-8">Attendance</h2>
 
         {% if attendances.length %}
             {% set sortedAttendances = attendances | sort(true, false, 'attendanceDate') %}
