--- a/server/views/case-summary-record.njk
+++ b/server/views/case-summary-record.njk
@@ -66,6 +66,30 @@
                         </ul>
                     {% endif %}
 
+                    {% if order.pssRequirements and order.pssRequirements | length %}
+                        <h3 class="govuk-heading-s govuk-!-margin-bottom-2">PSS requirements</h3>
+
+                        <ul class="govuk-list govuk-list--bullet qa-current-pss-requirements-{{ loop.index0 }}">
+                            {%- for pssRequirement in order.pssRequirements %}
+                                <li>
+                                    {{ pssRequirement.type.description  + (' - ' + pssRequirement.subType.description if pssRequirement.subType | length)}}
+                                </li>
+                            {% endfor %}
+                        </ul>
+                    {% endif %}
+
+                    {% if order.licenceConditions and order.licenceConditions | length %}
+                        <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Licence conditions</h3>
+
+                        <ul class="govuk-list govuk-list--bullet qa-current-licence-conditions-{{ loop.index0 }}">
+                            {%- for licenceCondition in order.licenceConditions %}
+                                <li>
+                                    {{ licenceCondition.licenceConditionTypeMainCat.description }}
+                                </li>
+                            {% endfor %}
+                        </ul>
+                    {% endif %}
+
                     <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible" />
 
                 {% endfor -%}
