--- a/server/views/case-summary-record-order.njk
+++ b/server/views/case-summary-record-order.njk
@@ -183,7 +183,11 @@
             </div>
 
             {% if currentOrder.licenceConditions | length %}
-                <h2 class="govuk-heading-m govuk-!-margin-top-8">Licence conditions</h2>
+                {% if custodialOrder.custodialTypeCode === "B" %}
+                    <h2 class="govuk-heading-m govuk-!-margin-top-8">Licence conditions</h2>
+                {% else %}
+                    <h2 class="govuk-heading-m govuk-!-margin-top-8">Post-sentence supervision requirements</h2>
+                {% endif %}
                 <ul class="govuk-list govuk-list--bullet qa-current-requirements-{{ loop.index0 }}">
                     {%- for licenceConditions in currentOrder.licenceConditions %}
                         <li>
@@ -192,17 +196,6 @@
                     {% endfor %}
                 </ul>
                 <a href="" class=" govuk-body-m govuk-link govuk-link--no-visited-state">View licence conditions details</a>
-            {% endif %}
-
-            {% if currentOrder.licenceConditions | length %}
-                <h2 class="govuk-heading-m govuk-!-margin-top-8">Post-sentence supervision requirements</h2>
-                <ul class="govuk-list govuk-list--bullet qa-current-requirements-{{ loop.index0 }}">
-                    {%- for licenceConditions in currentOrder.licenceConditions %}
-                        <li>
-                            {{ licenceConditions.licenceConditionTypeMainCat.description }}
-                        </li>
-                    {% endfor %}
-                </ul>
             {% endif %}
 
             {% if currentOrder.requirements | length %}
