--- a/server/views/match-manual.njk
+++ b/server/views/match-manual.njk
@@ -76,7 +76,7 @@
 
                     <button type="submit" class="govuk-button">Find record</button>
 
-                    <p class="govuk-body"><a href="/match/defendant/{{ params.caseNo }}" class="govuk-link govuk-link--no-visited-state">Cancel</a></p>
+                    <p class="govuk-body"><a href="{{ backLink }}" class="govuk-link govuk-link--no-visited-state">Cancel</a></p>
                 </form>
             {% else %}
                 <form name="matchDefendant" id="matchDefendant" action="/match/defendant/{{ params.caseNo }}/confirm" method="post" novalidate>
