--- a/server/views/match-defendant.njk
+++ b/server/views/match-defendant.njk
@@ -1,17 +1,11 @@
 {% extends "partials/layout.njk" %}
 
-{% if session.matchType === 'bulk' %}
-    {%- set backUrl = '/match/' + session.matchType + '/' + session.matchDate -%}
-{% else %}
-    {%- set backUrl = '/case/' + data.caseNo + '/summary' -%}
-{% endif %}
-
 {% block backlink %}
 
     {%- from "govuk/components/back-link/macro.njk" import govukBackLink -%}
     {{ govukBackLink({
         text: "Back",
-        href: backUrl
+        href: backLink
     }) }}
 
 {% endblock %}
