--- a/server/views/case-list.njk
+++ b/server/views/case-list.njk
@@ -211,7 +211,7 @@
 
     {% if tableData.rows | length %}
         {% block table %}
-            <span class="govuk-heading-m">{{ params.caseCount }} case{{ 's' if params.caseCount > 1 and not params.filtersApplied }} {% if params.subsection !== "" %} {% if params.subsection === "added" %}added to {% else %}removed from {% endif%} today's case list at {{ moment(params.lastUpdated).format('hh:mma') }}{% endif %}</span>
+            <span class="govuk-heading-m">{{ params.caseCount }} case{{ 's' if params.caseCount > 1 }} {% if params.subsection !== "" %} {% if params.subsection === "added" %}added to {% else %}removed from {% endif%} today's case list at {{ moment(params.lastUpdated).format('hh:mma') }}{% endif %}</span>
             {%- from "govuk/components/table/macro.njk" import govukTable -%}
             {{ govukTable(tableData) }}
         {% endblock %}
