:sparkles: Included license/supervision status
Signed-off-by: Paul Massey <paul.massey@digital.justice.gov.uk>

--- a/server/views/case-summary-record.njk
+++ b/server/views/case-summary-record.njk
@@ -67,8 +67,10 @@
                     {% endif %}
 
                     {% if order.pssRequirements and order.pssRequirements | length %}
-                        <h3 class="govuk-heading-s govuk-!-margin-bottom-2">PSS requirements</h3>
+                        <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Post-release status</h3>
+                        <p class="govuk-body">On post-sentence supervision (PSS)</p>
 
+                        <h3 class="govuk-heading-s govuk-!-margin-bottom-2">PSS requirements</h3>
                         <ul class="govuk-list govuk-list--bullet qa-current-pss-requirements-{{ loop.index0 }}">
                             {%- for pssRequirement in order.pssRequirements %}
                                 <li>
@@ -79,8 +81,10 @@
                     {% endif %}
 
                     {% if order.licenceConditions and order.licenceConditions | length %}
-                        <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Licence conditions</h3>
+                        <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Post-release status</h3>
+                        <p class="govuk-body">On licence</p>
 
+                        <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Licence conditions</h3>
                         <ul class="govuk-list govuk-list--bullet qa-current-licence-conditions-{{ loop.index0 }}">
                             {%- for licenceCondition in order.licenceConditions %}
                                 <li>
