--- a/server/views/case-summary-record-order.njk
+++ b/server/views/case-summary-record-order.njk
@@ -128,9 +128,9 @@
 
 {% block caseContent %}
 
-    <h2 class="govuk-heading-l govuk-!-margin-0">{{ currentOrder.sentence.description }}</h2>
+    <h2 class="govuk-heading-l govuk-!-margin-0">{{ currentOrder.sentence.description + ' (' + currentOrder.sentence.length + ' ' + currentOrder.sentence.lengthUnits + ')' }}</h2>
 
-    <div class="govuk-grid-row govuk-!-margin-top-4">
+    <div class="govuk-grid-row govuk-!-margin-top-6">
         <div class="govuk-grid-column-two-thirds">
 
             <p class="govuk-body govuk-!-margin-top-1 govuk-!-margin-bottom-0">
@@ -139,7 +139,7 @@
 
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-one-third">
-                    <p class="govuk-hint govuk-!-margin-bottom-0 qa-start-title">{{ "Status" if custodialOrder else "Started" }}</p>
+                    <p class="govuk-hint govuk-!-margin-bottom-0 qa-start-title">{{ "Post-release status" if custodialOrder else "Started" }}</p>
                     <p class="govuk-body-l govuk-!-font-weight-bold govuk-!-margin-0 qa-start-date">
                         {%- if custodialOrder -%}
                             {{ "On licence" if custodialOrder.custodialTypeCode === "B" else "On post-sentence supervision (PSS)" }}
@@ -181,6 +181,18 @@
                     </p>
                 </div>
             </div>
+
+            {% if currentOrder.licenceConditions | length %}
+                <h2 class="govuk-heading-m govuk-!-margin-top-8">{{"Licence conditions" if custodialOrder.custodialTypeCode === "B" else "Post-sentence supervision requirements"}}</h2>
+                <ul class="govuk-list govuk-list--bullet qa-current-requirements-{{ loop.index0 }}">
+                    {%- for licenceConditions in currentOrder.licenceConditions %}
+                        <li>
+                            {{ licenceConditions.licenceConditionTypeMainCat.description }}
+                        </li>
+                    {% endfor %}
+                </ul>
+                <a href="" class=" govuk-body-m govuk-link govuk-link--no-visited-state">View licence conditions details</a>
+            {% endif %}
 
             {% if currentOrder.requirements | length %}
                 <h2 class="govuk-heading-m govuk-!-margin-top-8">Requirements</h2>
