:lipstick: Corrected display of probation status throughout
:arrow_up: Updated Cypress to 5.3.0
:arrow_up: Updated Supertest to 5.0.0

Signed-off-by: Paul Massey <paul.massey@digital.justice.gov.uk>

--- a/server/views/components/key-details-bar/template.njk
+++ b/server/views/components/key-details-bar/template.njk
@@ -32,7 +32,7 @@
         </div>
         {% if params.probationStatus | length %}
         <div class="pac-key-details-bar__bottom-block">
-                <span class="govuk-body pac-key-details-bar__divider"><strong>Probation status: </strong>{{ params.probationStatus }}{% if params.breach %} (Breach){% endif %}</span>
+                <span class="govuk-body pac-key-details-bar__divider"><strong>Probation status: </strong>{{ params.probationStatus | string | capitalize }}{% if params.breach %} (Breach){% endif %}</span>
         </div>
         {% endif %}
         
