--- a/server/views/match-unlink.njk
+++ b/server/views/match-unlink.njk
@@ -31,7 +31,7 @@
                 </div>
                 <div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">Probation status</dt>
-                    <dd class="govuk-summary-list__value">{{ details.probationStatus }}</dd>
+                    <dd class="govuk-summary-list__value">{{ details.probationStatus | string | capitalize }}</dd>
                 </div>
             </dl>
 
