--- a/server/views/partials/header.html
+++ b/server/views/partials/header.html
@@ -28,7 +28,9 @@
                     <li class="moj-header__navigation-item">
                         {{ user.displayName }}
                     </li>
-
+                    <li class="moj-header__navigation-item">
+                        <a class="moj-header__navigation-link pac-sign-out-link" href="/select-court">Change court</a>
+                    </li>
                     <li class="moj-header__navigation-item">
                         <a class="moj-header__navigation-link pac-sign-out-link" href="/logout">Sign out</a>
                     </li>
