--- a/server/views/case-list.njk
+++ b/server/views/case-list.njk
@@ -20,7 +20,7 @@
 
     {% set offences = [] %}
     {% set courtRoom = item.courtRoom - 0 %}
-    {% set notMatched = item.numberOfPossibleMatches > 1 and not item.crn | length %}
+    {% set notMatched = not item.crn | length and item.numberOfPossibleMatches > 1 %}
     {% if item.offences | length === 1 %}
         {% for offence in item.offences %}
             {{ offences.push(offence.offenceTitle | escape) }}
