--- a/server/views/components/key-details-bar/template.njk
+++ b/server/views/components/key-details-bar/template.njk
@@ -2,13 +2,13 @@
     <div class="pac-key-details-bar__key-details">
 
         <div class="pac-key-details-bar__right-block">
-            {% if params.probationStatus == 'No record' %}
+            {% if params.probationStatus == 'No record' and (not params.numberOfPossibleMatches or params.numberOfPossibleMatches <= 1) %}
                 <form method="get" action="/match/defendant/{{ params.caseNo }}/manual">
                     <button class="govuk-button govuk-button--secondary govuk-!-margin-bottom-0"
                             data-module="govuk-button" type="submit">Link nDelius record
                     </button>
                 </form>
-                {% elif params.crn | length and not params.hideUnlinkButton %}
+                {% elif params.crn | length and not params.hideUnlinkButton and (not params.numberOfPossibleMatches or params.numberOfPossibleMatches <= 1) %}
                 <form method="get" action="/match/defendant/{{ params.caseNo }}/unlink/{{ params.crn }}">
                     <button class="govuk-button govuk-button--secondary govuk-!-margin-bottom-0"
                             data-module="govuk-button" type="submit">Unlink nDelius record
@@ -26,11 +26,12 @@
             {% if params.pnc | length %}
                 <span class="govuk-body pac-key-details-bar__divider"><strong>PNC: </strong>{{ params.pnc }}</span>
             {% endif %}
-            {% if params.numberOfPossibleMatches > 1 and not params.crn | length %}
+            {% if not params.crn | length and params.numberOfPossibleMatches > 1 %}
                 <span class="govuk-body pac-key-details-bar__divider"><strong>Probation status: </strong> Possible nDelius record</span>
             {% endif %}
         </div>
-        {% if params.probationStatus | length %}
+
+        {% if params.probationStatus | length and (not params.numberOfPossibleMatches or params.numberOfPossibleMatches <= 1) %}
         <div class="pac-key-details-bar__bottom-block">
                 <span class="govuk-body pac-key-details-bar__divider"><strong>Probation status: </strong>{{ params.probationStatus | string | capitalize }}{% if params.breach %} (Breach){% endif %}</span>
         </div>
