--- a/server/views/case-summary-record-order.njk
+++ b/server/views/case-summary-record-order.njk
@@ -180,27 +180,29 @@
                 </div>
             </div>
 
-            {% if currentOrder.licenceConditions | length %}
-                <h2 class="govuk-heading-m govuk-!-margin-top-8">{{"Licence conditions"}}</h2>
-                <ul class="govuk-list govuk-list--bullet qa-current-requirements-{{ loop.index0 }}">
-                    {%- for licenceConditions in currentOrder.licenceConditions %}
-                        <li>
-                            {{ licenceConditions.description }}
-                        </li>
-                    {% endfor %}
-                </ul>
-                <a href="" class=" govuk-body-m govuk-link govuk-link--no-visited-state">View licence conditions details</a>
-            {% endif %}
-
-            {% if currentOrder.pssRequirements | length %}
-                <h2 class="govuk-heading-m govuk-!-margin-top-8">{{"Post-sentence supervision requirements"}}</h2>
-                <ul class="govuk-list govuk-list--bullet qa-current-requirements-{{ loop.index0 }}">
-                    {%- for pssRequirement in currentOrder.pssRequirements %}
-                        <li>
-                            {{ pssRequirement.description  + (' - ' + pssRequirement.subTypeDescription if pssRequirement.subTypeDescription | length) }}
-                        </li>
-                    {% endfor %}
-                </ul>
+            {% if custodialOrder.custodialTypeCode === "B" %}
+                {% if currentOrder.licenceConditions | length %}
+                    <h2 class="govuk-heading-m govuk-!-margin-top-8">Licence conditions</h2>
+                    <ul class="govuk-list govuk-list--bullet qa-current-requirements-{{ loop.index0 }}">
+                        {%- for licenceConditions in currentOrder.licenceConditions %}
+                            <li>
+                                {{ licenceConditions.description }}
+                            </li>
+                        {% endfor %}
+                    </ul>
+                    <a href="" class=" govuk-body-m govuk-link govuk-link--no-visited-state">View licence conditions details</a>
+                {% endif %}
+            {% else %}
+                {% if currentOrder.pssRequirements | length %}
+                    <h2 class="govuk-heading-m govuk-!-margin-top-8">Post-sentence supervision requirements</h2>
+                    <ul class="govuk-list govuk-list--bullet qa-current-requirements-{{ loop.index0 }}">
+                        {%- for pssRequirement in currentOrder.pssRequirements %}
+                            <li>
+                                {{ pssRequirement.description  + (' - ' + pssRequirement.subTypeDescription if pssRequirement.subTypeDescription | length) }}
+                            </li>
+                        {% endfor %}
+                    </ul>
+                {% endif %}
             {% endif %}
 
             {% if currentOrder.requirements | length %}
