--- a/server/views/case-summary-record.njk
+++ b/server/views/case-summary-record.njk
@@ -62,33 +62,32 @@
                         </ul>
                     {% endif %}
 
-                    {% if order.pssRequirements and order.pssRequirements | length %}
-                        <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Post-release status</h3>
-                        <p class="govuk-body">On post-sentence supervision (PSS)</p>
+                    {% if order.custodialTypeCode === "B" %}
+                        {% if order.licenceConditions and order.licenceConditions | length %}
+                            <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Post-release status</h3>
+                            <p class="govuk-body">On licence</p>
 
-                        <h3 class="govuk-heading-s govuk-!-margin-bottom-2">PSS requirements</h3>
-                        <ul class="govuk-list govuk-list--bullet qa-current-pss-requirements-{{ loop.index0 }}">
-                            {%- for pssRequirement in order.pssRequirements %}
-                                <li>
-                                    {{ pssRequirement.description  + (' - ' + pssRequirement.subTypeDescription if pssRequirement.subTypeDescription | length)}}
-                                </li>
-                            {% endfor %}
-                        </ul>
+                            <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Licence conditions</h3>
+                            <ul class="govuk-list govuk-list--bullet qa-current-licence-conditions-{{ loop.index0 }}">
+                                {%- for licenceCondition in order.licenceConditions %}
+                                    <li>{{ licenceCondition.description }}</li>
+                                {% endfor %}
+                            </ul>
+                        {% endif %}
+                    {% else %}
+                        {% if order.pssRequirements and order.pssRequirements | length %}
+                            <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Post-release status</h3>
+                            <p class="govuk-body">On post-sentence supervision (PSS)</p>
+
+                            <h3 class="govuk-heading-s govuk-!-margin-bottom-2">PSS requirements</h3>
+                            <ul class="govuk-list govuk-list--bullet qa-current-pss-requirements-{{ loop.index0 }}">
+                                {%- for pssRequirement in order.pssRequirements %}
+                                    <li>{{ pssRequirement.description  + (' - ' + pssRequirement.subTypeDescription if pssRequirement.subTypeDescription | length)}}</li>
+                                {% endfor %}
+                            </ul>
+                        {% endif %}
                     {% endif %}
 
-                    {% if order.licenceConditions and order.licenceConditions | length %}
-                        <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Post-release status</h3>
-                        <p class="govuk-body">On licence</p>
-
-                        <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Licence conditions</h3>
-                        <ul class="govuk-list govuk-list--bullet qa-current-licence-conditions-{{ loop.index0 }}">
-                            {%- for licenceCondition in order.licenceConditions %}
-                                <li>
-                                    {{ licenceCondition.description }}
-                                </li>
-                            {% endfor %}
-                        </ul>
-                    {% endif %}
 
                     <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible" />
 
