:clown_face: Corrected Sheffield court code
Signed-off-by: Paul Massey <paul.massey@digital.justice.gov.uk>

--- a/server/views/select-court.njk
+++ b/server/views/select-court.njk
@@ -20,9 +20,9 @@
             },
             items: [
                 {
-                    value: "SHF",
+                    value: "B14LO00",
                     text: "Sheffield Magistrates' Court",
-                    checked: params.courtCode === 'SHF'
+                    checked: params.courtCode === 'B14LO00'
                 },
                 {
                     value: "B10JQ00",
